# octo-o-weaver

./: Cargo.toml  README.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  OPENCLAW_DEPLOYMENT.md  OPENCODE_INTEGRATION.md  README.md  TROUBLESHOOTING.md
examples/: mining_workflow.rs  staking_strategy.rs  swap_quoting.rs
examples/agents/liquidity-arbitrage/: Cargo.toml
examples/agents/liquidity-arbitrage/src/: lib.rs  main.rs
examples/agents/staking-optimizer/: Cargo.toml
examples/agents/staking-optimizer/src/: lib.rs  main.rs
examples/agents/tensor-miner/: Cargo.toml
examples/agents/tensor-miner/src/: lib.rs  main.rs
examples/agents/yield-farmer/: Cargo.toml
examples/agents/yield-farmer/src/: lib.rs  main.rs
openclaw-configs/: wallet-permissions.yaml
openclaw-skills/: tribewarez-staking-optimizer.yaml  tribewarez-tensor-miner.yaml  tribewarez-yield-farmer.yaml
skills/: opencode-tribewarez-agent-gen.json
skills/prompts/: custom-strategy.md  liquidity-arbitrage.md  staking-optimizer.md  tensor-miner.md  yield-farmer.md
src/: cross_chain_bridge.rs  error.rs  governance.rs  lib.rs  liquidity.rs  miner_lifecycle.rs  pool_strategy.rs  proof_orchestration.rs  reward_distribution.rs  tensor_network.rs  types.rs
