[package]
name = "octo-weaver-liquidity-arbitrage"
version = "0.1.0"
edition = "2021"
description = "TribeWarez Liquidity Arbitrage Bot - Multi-hop swap optimization"
authors = ["TribeWarez"]

[dependencies]
octo-O-weaver = { path = "../../", version = "0.1.0" }
tokio = { version = "1", features = ["full"] }
solana-sdk = "1.18"
solana-client = "1.18"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }

[lib]
name = "liquidity_arbitrage"
path = "src/lib.rs"

[[bin]]
name = "liquidity-arbitrage"
path = "src/main.rs"
