[package]
name = "octo-weaver-tensor-miner"
version = "0.1.0"
edition = "2021"
description = "TribeWarez Tensor Mining Agent - PoT-O proof generation & submission"
authors = ["TribeWarez"]

[dependencies]
octo-O-weaver = { path = "../../", version = "0.1.0" }
tokio = { version = "1", features = ["full"] }
solana-sdk = "1.18"
solana-client = "1.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
ai3-lib = { path = "../../../ai3-lib", version = "0.4.0" }

[lib]
name = "tensor_miner"
path = "src/lib.rs"

[[bin]]
name = "tensor-miner"
path = "src/main.rs"
